--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: thingsboard_app
+name: Smart
 description: Flutter ThingsBoard Mobile Application
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -13,8 +13,8 @@ dependencies:
     sdk: flutter
   thingsboard_client: 1.0.6
   intl: ^0.17.0
-  flutter_secure_storage: ^6.0.0
-  flutter_speed_dial: ^6.0.0
+  flutter_secure_storage: ^8.1.0
+  flutter_speed_dial: ^7.0.0
   cupertino_icons: ^1.0.2
   fluro: ^2.0.3
   flutter_svg: ^1.1.3
@@ -30,13 +30,13 @@ dependencies:
 #  permission_handler: ^8.0.0+2
 #  path_provider: ^2.0.2
   url_launcher: ^6.0.3
-  image_picker: ^0.8.0
+  image_picker: ^1.0.2
   mime: ^1.0.0
-  logger: ^1.0.0
+  logger: ^2.0.1
   qr_code_scanner: ^1.0.0
-  device_info_plus: ^4.1.2
-  geolocator: ^9.0.1
-  material_design_icons_flutter: ^5.0.5955-rc.1
+  device_info_plus: ^9.0.3
+  geolocator: ^10.0.0
+  material_design_icons_flutter: ^7.0.7296
   package_info: ^2.0.2
   dart_jsonwebtoken: ^2.2.0
   crypto: ^3.0.1
@@ -51,7 +51,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.12.0
 
 flutter:
   uses-material-design: true
