--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     </queries>
     <application
         android:requestLegacyExternalStorage="true"
-        android:label="ThingsBoard App"
+        android:label="3G Irrig App"
         android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/launcher_icon">
         <activity
